--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -15001,7 +15001,6 @@ Concentric</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="tab_pos">bottom</property>
-                                                            <property name="show_tabs">False</property>
                                                             <property name="show_border">False</property>
                                                             <child>
                                                             <widget class="GtkNotebook" id="notebook_encoder_capture_or_exercise_or_instructions">
@@ -18817,6 +18816,12 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
