--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -15530,7 +15530,7 @@ Concentric</property>
                                                             <property name="has_frame">False</property>
                                                             <property name="invisible_char">●</property>
                                                             <property name="width_chars">3</property>
-                                                            <property name="text">1</property>
+                                                            <property name="text">10</property>
                                                             <property name="xalign">1</property>
                                                             <property name="shadow_type">none</property>
                                                             <property name="invisible_char_set">True</property>
@@ -18886,6 +18886,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
