--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -15190,6 +15190,7 @@ Concentric</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="tab_pos">bottom</property>
+                                                            <property name="show_tabs">False</property>
                                                             <property name="show_border">False</property>
                                                             <child>
                                                             <widget class="GtkNotebook" id="notebook_encoder_capture_or_exercise_or_instructions">
@@ -19071,6 +19072,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
