--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -13676,12 +13676,12 @@ Concentric</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkVBox" id="vbox72">
+                                              <widget class="GtkVPaned" id="vpaned1">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">False</property>
+                                                <property name="can_focus">True</property>
                                                 <child>
                                                   <widget class="GtkHBox" id="hbox76">
-                                                    <property name="height_request">150</property>
+                                                    <property name="height_request">75</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
                                                     <property name="spacing">12</property>
@@ -13735,13 +13735,13 @@ Concentric</property>
                                                     </child>
                                                   </widget>
                                                   <packing>
-                                                    <property name="expand">False</property>
-                                                    <property name="fill">False</property>
-                                                    <property name="position">0</property>
+                                                    <property name="resize">False</property>
+                                                    <property name="shrink">False</property>
                                                   </packing>
                                                 </child>
                                                 <child>
                                                   <widget class="GtkViewport" id="viewport_sprint">
+                                                    <property name="height_request">150</property>
                                                     <property name="visible">True</property>
                                                     <property name="can_focus">False</property>
                                                     <child>
@@ -13753,9 +13753,8 @@ Concentric</property>
                                                     </child>
                                                   </widget>
                                                   <packing>
-                                                    <property name="expand">True</property>
-                                                    <property name="fill">True</property>
-                                                    <property name="position">1</property>
+                                                    <property name="resize">True</property>
+                                                    <property name="shrink">False</property>
                                                   </packing>
                                                 </child>
                                               </widget>
@@ -19078,6 +19077,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
